Enable brip in GPO and not ignore site-packages.brython.js

--- a/.gitignore
+++ b/.gitignore
@@ -129,4 +129,6 @@ dmypy.json
 .pyre/
 
 Session.vim
-website/site-packages.brython.js
+
+## Github Pages Overwriter 1.2 does not like this
+#website/site-packages.brython.js
